bugfix: Save Button is overlapping with Palette

--- a/static/less/invite_edit.less
+++ b/static/less/invite_edit.less
@@ -40,9 +40,9 @@
     }
 
     .edit_button_container{
-      margin-top: -20px;
+      margin-top: 10px; 
       text-align: center;
-      padding-bottom: 20px;
+      padding-bottom: 5px;
 
       .btn{
         min-width: 100px;
@@ -114,7 +114,6 @@
   }
 
   .editable .fa-pen {      
-    display: none;
     margin-left: 5px;
   }
 
